<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow  android:layout_marginTop="10dp"
        android:gravity="center">
        <ImageView
            android:layout_span="3"
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile_image"
            tools:srcCompat="@tools:sample/avatars" />
    </TableRow>
    <TableRow android:layout_marginTop="100dp"
        android:gravity="center">
        <TextView
            android:layout_span="3"
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_username_label"
            android:textAlignment="center"/>
    </TableRow>
    <TableRow android:layout_marginTop="100dp"
        android:gravity="center">
        <TextView
            android:layout_span="3"
            android:id="@+id/profile_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_position_label"
            android:textAlignment="center"/>
    </TableRow>
    <TableRow android:layout_marginTop="100dp">
        <ImageButton
            android:layout_span="1"
            android:id="@+id/profile_add_printer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="52dp"
            android:src="@drawable/add_printer_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="Add Printer" />

        <Button
            android:layout_gravity="bottom"
            android:layout_span="1"
            android:id="@+id/profile_modify_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Modify" />

        <Button
            android:layout_gravity="bottom"
            android:layout_span="1"
            android:id="@+id/profile_contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact"
            />
    </TableRow>
</TableLayout>